k8s/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wisecow-deployment
  namespace: wisecow-ns
spec:
  replicas: 2
  selector:
    matchLabels:
      app: wisecow
  template:
    metadata:
      labels:
        app: wisecow
    spec:
      containers:
  - name: wisecow
    image: ghcr.io/sambireddy93/wisecow:latest
    ports:
      - containerPort: 4499
