k8s/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: wisecow-service
  namespace: wisecow-ns
spec:
  type: NodePort
  selector:
    app: wisecow
  ports:
    - port: 80
      targetPort: 4499
      nodePort: 30007
